Add Swagger Refactored and updated code